--- a/src/Ferop/Ferop.fsproj
+++ b/src/Ferop/Ferop.fsproj
@@ -44,10 +44,15 @@
     <Compile Include="helpers.fs" />
     <Compile Include="io.fs" />
     <Compile Include="core.fs" />
-    <Compile Include="codeSpec.fs" />
     <Compile Include="osx.fs" />
     <Compile Include="internalFerop.fs" />
     <Compile Include="compiler.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
+  <ItemGroup>
+    <ProjectReference Include="..\Ferop.C\Ferop.C.fsproj">
+      <Project>{C60674AF-73FA-42A5-9B11-0A1FA7DC1327}</Project>
+      <Name>Ferop.C</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
