--- a/src/Ferop/Ferop.fsproj
+++ b/src/Ferop/Ferop.fsproj
@@ -44,6 +44,7 @@
     <Compile Include="helpers.fs" />
     <Compile Include="io.fs" />
     <Compile Include="core.fs" />
+    <Compile Include="win.fs" />
     <Compile Include="osx.fs" />
     <Compile Include="internalFerop.fs" />
     <Compile Include="compiler.fs" />
