--- a/src/Ferop.Tests/Ferop.Tests.fsproj
+++ b/src/Ferop.Tests/Ferop.Tests.fsproj
@@ -39,9 +39,11 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Ferop.TypeProvider">
-      <HintPath>..\Ferop.TypeProvider\bin\Debug\Ferop.TypeProvider.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\Ferop.TypeProvider\Ferop.TypeProvider.fsproj">
+      <Name>Ferop.TypeProvider</Name>
+      <Project>{3a8a68fe-9195-44e3-84fe-2267eb59dda5}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System" />
