Added basic ios support

--- a/src/Ferop.Tests.iOS.Native/Ferop.Tests.iOS.Native.fsproj
+++ b/src/Ferop.Tests.iOS.Native/Ferop.Tests.iOS.Native.fsproj
@@ -3,11 +3,12 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6678562D-A620-48F4-A3E3-06FAE7FB50B1}</ProjectGuid>
+    <ProjectGuid>{D44685A4-7189-48E5-AD4D-1DB27723F643}</ProjectGuid>
+    <ProjectTypeGuids>{6BC8ED88-2882-458C-8E55-DFD12B67127B};{4925A630-B079-445D-BCD4-3A9C94FE9307}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <RootNamespace>Ferop.Tests.Native</RootNamespace>
-    <AssemblyName>Ferop.Tests.Native</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <RootNamespace>Ferop.Tests.iOS.Native</RootNamespace>
+    <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
+    <AssemblyName>Ferop.Tests.iOS.Native</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,21 +32,19 @@
     <Tailcalls>true</Tailcalls>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System" />
+    <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Numerics" />
+    <Reference Include="monotouch" />
+    <Reference Include="Ferop">
+      <HintPath>..\Ferop.TypeProvider\bin\Release\Ferop.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="tests.fs" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Ferop\Ferop.fsproj">
-      <Project>{90A45EB2-1122-4BFF-A921-04D926400AC0}</Project>
-      <Name>Ferop</Name>
-    </ProjectReference>
+    <Compile Include="native.fs" />
   </ItemGroup>
 </Project>
