--- a/src/Ferop.Tests/Ferop.Tests.fsproj
+++ b/src/Ferop.Tests/Ferop.Tests.fsproj
@@ -3,8 +3,6 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>10.0.0</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{6AFEE669-397C-4339-8146-1FDC54D1FA6E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Ferop.Tests</RootNamespace>
@@ -41,8 +39,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Ferop.TypeProvider\Ferop.TypeProvider.fsproj">
       <Name>Ferop.TypeProvider</Name>
-      <Project>{3a8a68fe-9195-44e3-84fe-2267eb59dda5}</Project>
-      <Private>True</Private>
+      <Project>{3A8A68FE-9195-44E3-84FE-2267EB59DDA5}</Project>
     </ProjectReference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -57,6 +54,10 @@
     <ProjectReference Include="..\Ferop.Tests.Native\Ferop.Tests.Native.fsproj">
       <Project>{6678562D-A620-48F4-A3E3-06FAE7FB50B1}</Project>
       <Name>Ferop.Tests.Native</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Ferop\Ferop.fsproj">
+      <Project>{90A45EB2-1122-4BFF-A921-04D926400AC0}</Project>
+      <Name>Ferop</Name>
     </ProjectReference>
   </ItemGroup>
 </Project>
