--- a/src/Ferop.TypeProvider/Ferop.TypeProvider.fsproj
+++ b/src/Ferop.TypeProvider/Ferop.TypeProvider.fsproj
@@ -30,24 +30,20 @@
     <ConsolePause>false</ConsolePause>
     <Tailcalls>true</Tailcalls>
   </PropertyGroup>
+  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
+  <ItemGroup>
+    <Compile Include="ProvidedTypes\Signatures\ProvidedTypes.fsi" />
+    <Compile Include="ProvidedTypes\Code\ProvidedTypes.fs" />
+    <Compile Include="ProvidedTypes\Code\Debug.fs" />
+    <Compile Include="cprovider.fs" />
+    <None Include="packages.config" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=4.3.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ProvidedTypes\Signatures\ProvidedTypes.fsi" />
-    <Compile Include="ProvidedTypes\Code\ProvidedTypes.fs" />
-    <Compile Include="ProvidedTypes\Code\Debug.fs" />
-    <Compile Include="tp.fs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Ferop\Ferop.fsproj">
       <Project>{90A45EB2-1122-4BFF-A921-04D926400AC0}</Project>
       <Name>Ferop</Name>
