--- a/src/Ferop.Sample/Ferop.Sample.Unix.fsproj
+++ b/src/Ferop.Sample/Ferop.Sample.Unix.fsproj
@@ -21,14 +21,14 @@
     <Tailcalls>false</Tailcalls>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>pdbonly</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release</OutputPath>
     <ErrorReport>prompt</ErrorReport>
     <PlatformTarget>x86</PlatformTarget>
     <Externalconsole>true</Externalconsole>
-    <Tailcalls>true</Tailcalls>
+    <Tailcalls>false</Tailcalls>
     <DefineConstants>
     </DefineConstants>
   </PropertyGroup>
