--- a/src/Ferop.TypeProvider/Ferop.TypeProvider.Portable.fsproj
+++ b/src/Ferop.TypeProvider/Ferop.TypeProvider.Portable.fsproj
@@ -40,6 +40,9 @@
       <AssemblyName>FSharp.Core.dll</AssemblyName>
       <HintPath>$(MSBuildExtensionsPath32)\..\Reference Assemblies\Microsoft\FSharp\.NETCore\$(TargetFSharpCoreVersion)\FSharp.Core.dll</HintPath>
     </Reference>
+    <Reference Include="System.Runtime">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Runtime.fs" />
