--- a/src/Ferop.Tests.Native/Ferop.targets
+++ b/src/Ferop.Tests.Native/Ferop.targets
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Choose>
+    <When Condition="$(NCrunchOriginalSolutionDir) != '' And $(NCrunchOriginalSolutionDir) != '*Undefined*'">
+      <PropertyGroup>
+        <FeropSolutionDir>$(NCrunchOriginalSolutionDir)</FeropSolutionDir>
+      </PropertyGroup>
+    </When>
+    <When Condition="$(SolutionDir) != '' And $(SolutionDir) != '*Undefined*'">
+      <PropertyGroup>
+        <FeropSolutionDir>$(SolutionDir)</FeropSolutionDir>
+      </PropertyGroup>
+    </When>
+    <When Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">
+      <PropertyGroup>
+        <FeropSolutionDir>$(MSBuildProjectDirectory)..\..\..\</FeropSolutionDir>
+      </PropertyGroup>
+    </When>
+  </Choose>
+  <Choose>
+    <When Condition="$(KeyOriginatorFile) != '' And $(KeyOriginatorFile) != '*Undefined*'">
+      <PropertyGroup>
+        <FeropKeyFilePath>$(KeyOriginatorFile)</FeropKeyFilePath>
+      </PropertyGroup>
+    </When>
+    <When Condition="$(AssemblyOriginatorKeyFile) != '' And $(AssemblyOriginatorKeyFile) != '*Undefined*'">
+      <PropertyGroup>
+        <FeropKeyFilePath>$(AssemblyOriginatorKeyFile)</FeropKeyFilePath>
+      </PropertyGroup>
+    </When>
+    <Otherwise >
+      <PropertyGroup>
+        <FeropKeyFilePath></FeropKeyFilePath>
+      </PropertyGroup>
+    </Otherwise>
+  </Choose>
+  <PropertyGroup>
+    <IntermediateDir>$(ProjectDir)$(IntermediateOutputPath)</IntermediateDir>
+    <FeropSignAssembly Condition="$(FeropSignAssembly) == '' Or $(FeropSignAssembly) == '*Undefined*'">$(SignAssembly)</FeropSignAssembly>
+    <FeropPath Condition="$(FeropPath) == '' Or $(FeropPath) == '*Undefined*'">$(MSBuildThisFileDirectory)..\</FeropPath>
+  </PropertyGroup>
   <UsingTask
       TaskName="Ferop.WeavingTask"
-      AssemblyFile="$(ProjectDir)\Ferop.dll" />
+      AssemblyFile="$(FeropPath)\Ferop.dll" />
   <Target
       AfterTargets="AfterCompile"
-      Name="FeropTarget">
+      Name="WinFeropTarget"
+      DependsOnTargets="$(FeropDependsOnTargets)">
 
     <Ferop.WeavingTask
           AssemblyPath="@(IntermediateAssembly)"
           ProjectDirectory="$(ProjectDir)"
       />
   </Target>
+
+  <!--Support for ncrunch-->
+  <ItemGroup>
+    <None Include="$(FeropPath)\*.*" />
+  </ItemGroup>
+
 </Project>
