It was a good try

--- a/src/Ferop.Tests.Native/Ferop.targets
+++ b/src/Ferop.Tests.Native/Ferop.targets
@@ -50,6 +50,7 @@
     <Ferop.WeavingTask
           AssemblyPath="@(IntermediateAssembly)"
           ProjectDirectory="$(ProjectDir)"
+	  TargetDirectory="$(ProjectDir)$(OutputPath)"
       />
   </Target>
 
