--- a/src/Ferop.Sample/Ferop.Sample.fsproj
+++ b/src/Ferop.Sample/Ferop.Sample.fsproj
@@ -51,8 +51,7 @@
     <ErrorReport>prompt</ErrorReport>
     <Externalconsole>true</Externalconsole>
     <Tailcalls>true</Tailcalls>
-    <DefineConstants>
-    </DefineConstants>
+    <DefineConstants>__64BIT__</DefineConstants>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
